my-portfolio/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: #51a198;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: #51a198;
    --background-end-rgb: #51a198;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

/* Scrollbar for Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 15px;
}

*::-webkit-scrollbar-track {
}

*::-webkit-scrollbar-thumb {
  background: #86efac;
  background: -moz-linear-gradient(180deg, #86efac 35%, #60a5fa 100%);
  background: -webkit-linear-gradient(180deg, #86efac 35%, #60a5fa 100%);
  background: linear-gradient(180deg, #86efac 35%, #60a5fa 100%);
  border-radius: 0.5rem;
}

.icon-toggler-container {
  height: 25px;
  width: 50px;
  background-image: linear-gradient(to right, #60a5fa, #86efac);
  border-radius: 25px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 0 5px;
  cursor: pointer;
  transition: all 0.3s;
}

.handle {
  height: 25px;
  width: 25px;
  border-radius: 50%;
  display: grid;
  align-items: center;
  justify-items: center;
  overflow: hidden;
}

.toggler-icon {
  color: #fafafa;
}

